# project-creator

./: .env.sample  .gitignore  README.md  pyproject.toml  requirements.txt
app/: config.py  creator.py  main.py  parser.py  utils.py
templates/: main.yaml  test.yaml  tmp.yaml
templates/projects/: CLI.yaml  CLI_DB.yaml  fastAPI.yaml
